# gf-screening

./: .gitignore  LICENSE  README.md  debug_dk_links.py  debug_page_structure.py  debug_selectors.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_download.py
docs/: audit-2026-02-09.md
src/: __init__.py  dk_downloader.py  models.py  pdf_parser.py  pipeline.py  retention.py
tests/: __init__.py  conftest.py  test_dk_downloader.py  test_models.py  test_pdf_parser.py  test_pipeline.py  test_retention.py
